--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/estilo.css">
 
 </head>
-<body>
+<body class="html">
      <header class="headerprincipal,"> 
             <H1 id="titulo"> SOLUCIONES INFORMATICAS</H1>
             <nav class="navbar navbar-expand-lg navbar-light bg-light, inicioprincipal">
@@ -56,7 +56,7 @@
         
         <a href="#titulo"> Ir al inicio</a>
         </footer>
-
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
         
 </body>
 </html>
